syntax = "proto3";
option optimize_for = SPEED;

package com.sysalto.render.serialization;

message ListPdfBaseItem_proto {
    repeated PdfBaseItem_proto item = 1;
}

message PdfBaseItem_proto {
    int64 offset = 1;
    oneof field {
        PdfNames_proto pdfNames_proto = 2;
        PdfDests_proto pdfDests_proto = 3;
        PdfCatalog_proto pdfCatalog_proto = 4;
        PdfPageList_proto pdfPageList_proto = 5;
        PdfShaddingFctColor_proto pdfShaddingFctColor_proto = 6;
        PdfColorShadding_proto pdfColorShadding_proto = 7;
        PdfGPattern_proto PpdfGPattern_proto = 8;
        PdfImage_proto pdfImage_proto = 9;
        PdfPage_proto pdfPage_proto = 10;
        PdfAction_proto pdfAction_proto = 11;
        PdfAnnotation_proto pdfAnnotation = 12;
        PdfFont_proto pdfFont_proto = 13;
        PdfFontStream_proto PpdfFontStream_proto = 14;
        PdfFontDescriptor_proto pdfFontDescriptor_proto = 15;
        PdfPageContent_proto pdfPageContent_proto = 16;
    }
}

message PdfAnnotation_proto {
    int64 value1 = 1;
}

message PdfAction_proto {
    int64 value1 = 1;
}

message StringString_proto {
    string value1 = 1;
    string value2 = 2;
}

message PdfDests_proto {
    int64 value1 = 1;
    repeated StringString_proto value2 = 2;
}

message PdfNames_proto {
    int64 value1 = 1;
    PdfDests_proto value2 = 2;
}


message OptionPdfNames_proto {
    bool value1 = 1;
    PdfNames_proto value2 = 2;
}

message OptionLong_proto {
    bool value1 = 1;
    int64 value2 = 2;
}

message PdfPageList_proto {
    int64 value1 = 1;
    OptionLong_proto value2 = 2;
    repeated int64 value3 = 3;
}

message OptionPdfPageList_proto {
    bool value1 = 1;
    PdfPageList_proto value2 = 2;
}

message PdfCatalog_proto {
    int64 value1 = 1;
    OptionPdfPageList_proto value2 = 2;
    OptionPdfNames_proto value3 = 3;
}

message ReportColor_proto {
    int32 value1 = 1;
    int32 value2 = 2;
    int32 value3 = 3;
    float value4 = 4;
}

message PdfShaddingFctColor_proto {
    int64 value1 = 1;
    ReportColor_proto value2 = 2;
    ReportColor_proto value3 = 3;
}


message PdfColorShadding_proto {
    int64 value1 = 1;
    float value2 = 2;
    float value3 = 3;
    float value4 = 4;
    float value5 = 5;
    PdfShaddingFctColor_proto value6 = 6;
}

message PdfGPattern_proto {
    int64 value1 = 1;
    PdfColorShadding_proto value2 = 2;
}

message PdfImage_proto {
    int64 value1 = 1;
    string value2 = 2;
}

message PdfPageItem_proto {
    string content = 1;
    oneof field {
        PdfText_proto pdfText_proto = 2;
        PdfGraphic_proto pdfGraphic_proto = 3;
    }
}


message PdfGraphicChuck_proto {
    string content = 1;
    oneof field {
        DrawArc_proto drawArc_proto = 2;
        DrawCircle_proto drawCircle_proto = 3;
        DrawStroke_proto drawStroke_proto = 4;
        DrawFill_proto drawFill_proto = 5;
        DrawFillStroke_proto drawFillStroke_proto = 6;
        DrawMovePoint_proto drawMovePoint_proto = 7;
        DrawLine_proto drawLine_proto = 8;
        DrawRectangle_proto drawRectangle_proto = 9;
        DrawBorderColor_proto drawBorderColor_proto = 10;
        DrawFillColor_proto drawFillColor_proto = 11;
        DrawPattern_proto drawPattern_proto = 12;
        PdfRectangle_proto pdfRectangle_proto = 13;
        DrawPieChart_proto drawPieChart_proto = 14;
        PdfDrawImage_proto pdfDrawImage_proto = 15;
    }
}


message DrawPoint_proto {
    float value1 = 1;
    float value2 = 2;
}

message DrawArc_proto {
    DrawPoint_proto value1 = 1;
    float value2 = 2;
    float value3 = 3;
    float value4 = 4;
}


message DrawCircle_proto {
    DrawPoint_proto value1 = 1;
    float value2 = 2;
}


message DrawStroke_proto {

}

message DrawFill_proto {

}


message DrawFillStroke_proto {

}


message DrawMovePoint_proto {
    float value1 = 1;
    float value2 = 2;
}

message LineDashType_proto {
    int32 value1 = 1;
    int32 value2 = 2;
}


message OptionLineDashType_proto {
    bool value1 = 1;
    LineDashType_proto value2 = 2;
}

message DrawLine_proto {
    float value1 = 1;
    float value2 = 2;
    float value3 = 3;
    float value4 = 4;
    float value5 = 5;
    ReportColor_proto value6 = 6;
    OptionLineDashType_proto value7 = 7;
}


message DrawRectangle_proto {
    float value1 = 1;
    float value2 = 2;
    float value3 = 3;
    float value4 = 4;
}

message OptionFloat_proto {
    bool value1 = 1;
    float value2 = 2;
}

message PdfDrawImage_proto {
    PdfImage_proto value1 = 1;
    float value2 = 2;
    float value3 = 3;
    float value4 = 4;
    OptionFloat_proto value5 = 5;
}

message DrawBorderColor_proto {
    ReportColor_proto value1 = 1;
}

message PdfGraphic_proto {
    repeated PdfGraphicChuck_proto value1 = 1;
}

message OptionReportColor_proto {
    bool value1 = 1;
    ReportColor_proto value2 = 2;
}

message OptionPdfGPattern_proto {
    bool value1 = 1;
    PdfGPattern_proto value2 = 2;
}

message PdfRectangle_proto {
    int64 value1 = 1;
    int64 value2 = 2;
    int64 value3 = 3;
    int64 value4 = 4;
    float value5 = 5;
    OptionReportColor_proto value6 = 6;
    OptionReportColor_proto value7 = 7;
    OptionPdfGPattern_proto value8 = 8;
}


message DrawFillColor_proto {
    ReportColor_proto value1 = 1;
}

message PdfNativeGenerator_proto {
    string value1 = 1;
    float value2 = 2;
    float value3 = 3;
    bool value4 = 4;
}

message StringDouble_proto {
    string value1 = 1;
    double value2 = 2;
}

message DrawPieChart_proto {
    PdfNativeGenerator_proto value1 = 1;
    RFont_proto value2 = 2;
    string value3 = 3;
    repeated StringDouble_proto value4 = 4;
    float value5 = 5;
    float value6 = 6;
    float value7 = 7;
    float value8 = 8;
}


message OptionPdfPageContent_proto {
    bool value1=1;
    PdfPageContent_proto value2=2;
}

message DrawPattern_proto {
    PdfGPattern_proto value1 = 1;
}

message PatternDraw_proto {
    float value1 = 1;
    float value2 = 2;
    float value3 = 3;
    float value4 = 4;
    PdfGPattern_proto value5 = 5;
}

message OptionPatternDraw_proto {
    bool value1 = 1;
    PatternDraw_proto value2 = 2;
}

message OptionString_proto {
    bool value1 = 1;
    string value2 = 2;
}

message RFontFamily_proto {
    string value1 = 1;
    string value2 = 2;
    OptionString_proto value3 = 3;
    OptionString_proto value4 = 4;
    OptionString_proto value5 = 5;
}

message OptionRFontFamily_proto {
    bool value1 = 1;
    RFontFamily_proto value2 = 2;
}

enum RFontAttribute_proto {
    NORMAL = 0;
    BOLD = 1;
    ITALIC = 2;
    BOLD_ITALIC = 3;
}

message RFont_proto {
    int32 value1 = 1;
    string value2 = 2;
    RFontAttribute_proto value3 = 3;
    ReportColor_proto value4 = 4;
    OptionRFontFamily_proto value5 = 5;
}

message ReportTxt_proto {
    string value1 = 1;
    RFont_proto value2 = 2;
}

message PdfTxtChuck_proto {
    float value1 = 1;
    float value2 = 2;
    ReportTxt_proto value3 = 3;
    string value4 = 4;
    OptionPatternDraw_proto value5 = 5;
}

message PdfText_proto {
    repeated PdfTxtChuck_proto value1 = 1;
}

message PdfPageContent_proto {
    int64 value1 = 1;
    repeated PdfPageItem_proto value2 = 2;
    bool value3 = 3;
}

message FontBBox_proto {
    int32 value1 = 1;
    int32 value2 = 2;
    int32 value3 = 3;
    int32 value4 = 4;
}
message GlyphWidth_proto {
    int32 value1 = 1;
    int32 value2 = 2;
    repeated int32 value3 = 3;
}

message EmbeddedFontDescriptor_proto {
    int32 value1 = 1;
    int32 value2 = 2;
    int32 value3 = 3;
    FontBBox_proto value4 = 4;
    int32 value5 = 5;
    int32 value6 = 6;
    GlyphWidth_proto value7 = 7;
}

message OptionEmbeddedFontDescriptor_proto {
    bool value1 = 1;
    EmbeddedFontDescriptor_proto value2 = 2;
}

message FloatFloat_proto {
    float value1 = 1;
    float value2 = 2;
}

message FontMetric_proto {
    string value1 = 1;
    map<int32, float> value2 = 2;
    FloatFloat_proto value3 = 3;
    OptionEmbeddedFontDescriptor_proto value4 = 4;
}

message PdfFontStream_proto {
    int64 value1 = 1;
    string value2 = 2;
    FontMetric_proto value3 = 3;
    bool value4 = 4;
}

message PdfFontDescriptor_proto {
    int64 value1 = 1;
    PdfFontStream_proto value2 = 2;
    string value3 = 3;
}

message FontEmbeddedDef_proto {
    PdfFontDescriptor_proto value1 = 1;
    PdfFontStream_proto value2 = 2;
}

message OptionFontEmbeddedDef_proto {
    bool value1 = 1;
    FontEmbeddedDef_proto value2 = 2;
}


message PdfFont_proto {
    int64 value1 = 1;
    string value2 = 2;
    string value3 = 3;
    OptionFontEmbeddedDef_proto value4 = 4;
}

message PdfPage_proto {
    int64 value1 = 1;
    int64 value2 = 2;
    float value3 = 3;
    float value4 = 4;
    repeated PdfFont_proto value5 = 5;
    repeated PdfGPattern_proto value6 = 6;
    repeated PdfAnnotation_proto value7 = 7;
    repeated PdfImage_proto value8 = 8;
    OptionPdfPageContent_proto value9 = 9;
}