syntax = "proto3";
option optimize_for = SPEED;

package com.sysalto.report.serialization.common;


message BoundaryRect_proto {
    float left = 1;
    float bottom = 2;
    float right = 3;
    float top = 4;
}


message DirectDrawMovePoint_proto {
    float x = 1;
    float y = 2;
}

message DirectDrawLine_proto {
    float x = 1;
    float y = 2;
}

message DirectFillStroke_proto {
    bool fill = 1;
    bool stroke = 2;
}


message DirectDrawRectangle_proto {
    float x = 1;
    float y = 2;
    float width = 3;
    float height = 4;
}